2007-11-19  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinDatabase.cs: Workaround for mcs bug.

2007-11-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Description/ExtensionNodeDescription.cs: Add missing
	  ChildNodes property.

2007-11-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Localization, Mono.Addins.Localization/GettextDomain.cs,
	  Mono.Addins.Localization/IAddinLocalizer.cs,
	  Mono.Addins.Localization/NullLocalizer.cs,
	  Mono.Addins.Localization/StringTableLocalizer.cs,
	  Mono.Addins.Localization/StringResourceLocalizer.cs,
	  Mono.Addins.Localization/IAddinLocalizerFactory.cs,
	  Mono.Addins.Localization/GettextLocalizer.cs, Mono.Addins.mdp,
	  Mono.Addins/RuntimeAddin.cs, Mono.Addins/ExtensionTree.cs,
	  Mono.Addins/NodeAttributeAttribute.cs, Mono.Addins/AddinManager.cs,
	  Mono.Addins/ExtensionNode.cs, Mono.Addins/AddinLocalizer.cs,
	  Makefile.am, Mono.Addins.Description/NodeTypeAttribute.cs,
	  Mono.Addins.Description/AddinDescription.cs,
	  Mono.Addins.Description/ExtensionNodeType.cs: Implemented support for
	  add-in localization.
	* Mono.Addins/NodeElement.cs,
	  Mono.Addins.Description/ExtensionNodeDescriptionCollection.cs: Added
	  ChildNodes property to NodeElement.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp: Update paths.

2007-10-23  Ankit Jain  <jankit@novell.com>

	* Mono.Addins.csproj: Add missing IAddinInstaller.cs

2007-10-18  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Get ready for 0.3 release.

2007-10-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/ExtensionContext.cs: When an add-in is enabled at run-time,
	  take it into account when loading any extension point, since the add-in
	  list of the extension point may not have the latest info from the
	  registry. The same when disabled.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/Addin.cs: Fix issue in CompareVersions.
